Update nginx k8s manifest

--- a/k8s-manifests/nginx.yaml
+++ b/k8s-manifests/nginx.yaml
@@ -4,9 +4,9 @@ metadata:
   name: nginx-deploy-test
   labels:
     app: nginx
-  namespace: flux-system
+  namespace: default
 spec:
-  replicas: 4
+  replicas: 5
   selector:
     matchLabels:
       app: nginx
