--- a/manifests/spack.yaml
+++ b/manifests/spack.yaml
@@ -10,7 +10,7 @@ spec:
       cpu: "0.5"
       exposeType: ClusterIP
       image: spack/spack.io
-      memory: 1024Mi
+      memory: 8Gi
       ports:
       - expose: true
         port: 80
