--- a/infra/modules/kubevela/otel-operator.yaml
+++ b/infra/modules/kubevela/otel-operator.yaml
@@ -108,79 +108,99 @@ metadata:
 spec:
   schematic:
     cue:
-      template: "outputs: collector: {\n\tkind:       \"OpenTelemetryCollector\"\n\tapiVersion:
-        \"opentelemetry.io/v1alpha1\"\n\tmetadata: name: context.name\n\tspec: {\n\t\taffinity:
-        \          parameter.affinity\n\t\targs:               parameter.args\n\t\tautoscaler:
-        \        parameter.autoscaler\n\t\tconfig:             parameter.config\n\t\tenv:
-        \               parameter.env\n\t\tenvFrom:            parameter.envFrom\n\t\thostNetwork:
-        \       parameter.hostNetwork\n\t\timage:              parameter.image\n\t\timagePullPolicy:
-        \   parameter.imagePullPolicy\n\t\tingress:            parameter.ingress\n\t\tmaxReplicas:
-        \       parameter.maxReplicas\n\t\tminReplicas:        parameter.minReplicas\n\t\tmode:
-        \              parameter.mode\n\t\tnodeSelector:       parameter.nodeSelector\n\t\tpodAnnotations:
-        \    parameter.podAnnotations\n\t\tpodSecurityContext: parameter.podSecurityContext\n\t\tports:
-        \             parameter.ports\n\t\tpriorityClassName:  parameter.priorityClassName\n\t\treplicas:
-        \          parameter.replicas\n\t\tresources:          parameter.resources\n\t\tsecurityContext:
-        \   parameter.securityContext\n\t}\n}\nparameter: {\n\t//+usage=If specified,
-        indicates the pod's scheduling constraints.\n\taffinity: *null | {...}\n\t//+usage=Args
-        is the set of arguments to pass to the OpenTelemetry Collector binary.\n\targs:
-        *null | {...}\n\t//+usage=Autoscaler specifies the pod autoscaling configuration
-        to use for the OpenTelemetryCollector workload.\n\tautoscaler: *null | {...}\n\t//+usage=Config
-        is the raw JSON to be used as the collector's configuration. Refer to the
-        OpenTelemetry Collector documentation for details.\n\tconfig: *null | string\n\t//+usage=ENV
-        vars to set on the OpenTelemetry Collector's Pods. These can then in certain
-        cases be consumed in the config file for the Collector.\n\tenv: *null | [...]\n\t//+usage=List
-        of sources to populate environment variables on the OpenTelemetry Collector's
-        Pods. These can then in certain cases be consumed in the config file for the
-        Collector.\n\tenvFrom: *null | [...]\n\t//+usage=HostNetwork indicates if
-        the pod should run in the host networking namespace.\n\thostNetwork: *null
-        | bool\n\t//+usage=Image indicates the container image to use for the OpenTelemetry
-        Collector.\n\timage: *null | string\n\t//+usage=ImagePullPolicy indicates
-        the pull policy to be used for retrieving the container image (Always, Never,
-        IfNotPresent)\n\timagePullPolicy: *null | string\n\t//+usage=Ingress is used
-        to specify how OpenTelemetry Collector is exposed. This functionality is only
-        available if one of the valid modes is set. Valid modes are: deployment, daemonset
-        and statefulset.\n\tingress: *null | {...}\n\t//+usage=MaxReplicas sets an
-        upper bound to the autoscaling feature. If MaxReplicas is set autoscaling
-        is enabled. Deprecated: use \"OpenTelemetryCollector.Spec.Autoscaler.MaxReplicas\"
-        instead.\n\tmaxReplicas: *null | int\n\t//+usage=MinReplicas sets a lower
-        bound to the autoscaling feature. Set this if your are using autoscaling.
-        It must be at least 1. Deprecated: use \"OpenTelemetryCollector.Spec.Autoscaler.MinReplicas\"
-        instead.\n\tminReplicas: *null | int\n\t//+usage=Mode represents how the collector
-        should be deployed (deployment, daemonset, statefulset or sidecar).\n\tmode:
-        *\"deployment\" | string\n\t//+usage=NodeSelector to schedule OpenTelemetry
-        Collector pods. This is only relevant to daemonset, statefulset, and deployment
-        mode.\n\tnodeSelector: *null | {...}\n\t//+usage=PodAnnotations is the set
-        of annotations that will be attached to Collector and Target Allocator pods.\n\tpodAnnotations:
-        *null | {...}\n\t//+usage=PodSecurityContext holds pod-level security attributes
-        and common container settings. Some fields are also present in container.securityContext.
-        \ Field values of container.securityContext take precedence over field values
-        of PodSecurityContext.\n\tpodSecurityContext: *null | {...}\n\t//+usage=Ports
-        allows a set of ports to be exposed by the underlying v1.Service. By default,
-        the operator will attempt to infer the required ports by parsing the .Spec.Config
-        property but this property can be used to open additional ports that can't
-        be inferred by the operator, like for custom receivers.\n\tports: *null |
-        [...]\n\t//+usage=If specified, indicates the pod's priority. If not specified,
-        the pod priority will be default or zero if there is no default.\n\tpriorityClassName:
-        *null | string\n\t//+usage=Replicas is the number of pod instances for the
-        underlying OpenTelemetry Collector. Set this if your are not using autoscaling.\n\treplicas:
-        *null | int\n\t//+usage=Resources to set on the OpenTelemetry Collector pods.\n\tresources:
-        *null | {...}\n\t//+usage=SecurityContext will be set as the container security
-        context.\n\tsecurityContext: *null | {...}\n\t//+usage=ServiceAccount indicates
-        the name of an existing service account to use with this instance. When set,
-        the operator will not automatically create a ServiceAccount for the collector.\n\tserviceAccount:
-        *null | string\n\t//+usage=TargetAllocator indicates a value which determines
-        whether to spawn a target allocation resource or not.\n\ttargetAllocator:
-        *null | {...}\n\t//+usage=Toleration to schedule OpenTelemetry Collector pods.
-        This is only relevant to daemonset, statefulset, and deployment mode.\n\ttolerations:
-        *null | [...]\n\t//+usage=UpgradeStrategy represents how the operator will
-        handle upgrades to the CR when a newer version of the operator is deployed.\n\tupgradeStrategy:
-        *null | string\n\t//+usage=VolumeClaimTemplates will provide stable storage
-        using PersistentVolumes. Only available when the mode=statefulset.\n\tvolumeClaimTemplates:
-        *null | [...]\n\t//+usage=VolumeMounts represents the mount points to use
-        in the underlying collector deployment(s).\n\tvolumeMounts: *null | [...]\n\t//+usage=Volumes
-        represents which volumes to use in the underlying collector deployment(s).\n\tvolumes:
-        *null | [...]\n}\n"
-  stage: PreDispatch
+      template: |
+        patch: spec: template: metadata: annotations: {
+          "sidecar.opentelemetry.io/inject": context.name
+        }
+        outputs: collector: {
+          kind:       "OpenTelemetryCollector"
+          apiVersion: "opentelemetry.io/v1alpha1"
+          metadata: {
+            name: context.name
+          }
+          spec: {
+            affinity:           parameter.affinity
+            args:               parameter.args
+            autoscaler:         parameter.autoscaler
+            config:             parameter.config
+            env:                parameter.env
+            envFrom:            parameter.envFrom
+            hostNetwork:        parameter.hostNetwork
+            image:              parameter.image
+            imagePullPolicy:    parameter.imagePullPolicy
+            ingress:            parameter.ingress
+            maxReplicas:        parameter.maxReplicas
+            minReplicas:        parameter.minReplicas
+            mode:               parameter.mode
+            nodeSelector:       parameter.nodeSelector
+            podAnnotations:     parameter.podAnnotations
+            podSecurityContext: parameter.podSecurityContext
+            ports:              parameter.ports
+            priorityClassName:  parameter.priorityClassName
+            replicas:           parameter.replicas
+            resources:          parameter.resources
+            securityContext:    parameter.securityContext
+          }
+        }
+        parameter: {
+          //+usage=If specified, indicates the pod's scheduling constraints.
+          affinity: *null | {...}
+          //+usage=Args is the set of arguments to pass to the OpenTelemetry Collector binary.
+          args: *null | {...}
+          //+usage=Autoscaler specifies the pod autoscaling configuration to use for the OpenTelemetryCollector workload.
+          autoscaler: *null | {...}
+          //+usage=Config is the raw JSON to be used as the collector's configuration. Refer to the OpenTelemetry Collector documentation for details.
+          config: *null | string
+          //+usage=ENV vars to set on the OpenTelemetry Collector's Pods. These can then in certain cases be consumed in the config file for the Collector.
+          env: *null | [...]
+          //+usage=List of sources to populate environment variables on the OpenTelemetry Collector's Pods. These can then in certain cases be consumed in the config file for the Collector.
+          envFrom: *null | [...]
+          //+usage=HostNetwork indicates if the pod should run in the host networking namespace.
+          hostNetwork: *null | bool
+          //+usage=Image indicates the container image to use for the OpenTelemetry Collector.
+          image: *null | string
+          //+usage=ImagePullPolicy indicates the pull policy to be used for retrieving the container image (Always, Never, IfNotPresent)
+          imagePullPolicy: *null | string
+          //+usage=Ingress is used to specify how OpenTelemetry Collector is exposed. This functionality is only available if one of the valid modes is set. Valid modes are: deployment, daemonset and statefulset.
+          ingress: *null | {...}
+          //+usage=MaxReplicas sets an upper bound to the autoscaling feature. If MaxReplicas is set autoscaling is enabled. Deprecated: use "OpenTelemetryCollector.Spec.Autoscaler.MaxReplicas" instead.
+          maxReplicas: *null | int
+          //+usage=MinReplicas sets a lower bound to the autoscaling feature. Set this if your are using autoscaling. It must be at least 1. Deprecated: use "OpenTelemetryCollector.Spec.Autoscaler.MinReplicas" instead.
+          minReplicas: *null | int
+          //+usage=Mode represents how the collector should be deployed (deployment, daemonset, statefulset or sidecar).
+          mode: *"deployment" | string
+          //+usage=NodeSelector to schedule OpenTelemetry Collector pods. This is only relevant to daemonset, statefulset, and deployment mode.
+          nodeSelector: *null | {...}
+          //+usage=PodAnnotations is the set of annotations that will be attached to Collector and Target Allocator pods.
+          podAnnotations: *null | {...}
+          //+usage=PodSecurityContext holds pod-level security attributes and common container settings. Some fields are also present in container.securityContext.  Field values of container.securityContext take precedence over field values of PodSecurityContext.
+          podSecurityContext: *null | {...}
+          //+usage=Ports allows a set of ports to be exposed by the underlying v1.Service. By default, the operator will attempt to infer the required ports by parsing the .Spec.Config property but this property can be used to open additional ports that can't be inferred by the operator, like for custom receivers.
+          ports: *null | [...]
+          //+usage=If specified, indicates the pod's priority. If not specified, the pod priority will be default or zero if there is no default.
+          priorityClassName: *null | string
+          //+usage=Replicas is the number of pod instances for the underlying OpenTelemetry Collector. Set this if your are not using autoscaling.
+          replicas: *null | int
+          //+usage=Resources to set on the OpenTelemetry Collector pods.
+          resources: *null | {...}
+          //+usage=SecurityContext will be set as the container security context.
+          securityContext: *null | {...}
+          //+usage=ServiceAccount indicates the name of an existing service account to use with this instance. When set, the operator will not automatically create a ServiceAccount for the collector.
+          serviceAccount: *null | string
+          //+usage=TargetAllocator indicates a value which determines whether to spawn a target allocation resource or not.
+          targetAllocator: *null | {...}
+          //+usage=Toleration to schedule OpenTelemetry Collector pods. This is only relevant to daemonset, statefulset, and deployment mode.
+          tolerations: *null | [...]
+          //+usage=UpgradeStrategy represents how the operator will handle upgrades to the CR when a newer version of the operator is deployed.
+          upgradeStrategy: *null | string
+          //+usage=VolumeClaimTemplates will provide stable storage using PersistentVolumes. Only available when the mode=statefulset.
+          volumeClaimTemplates: *null | [...]
+          //+usage=VolumeMounts represents the mount points to use in the underlying collector deployment(s).
+          volumeMounts: *null | [...]
+          //+usage=Volumes represents which volumes to use in the underlying collector deployment(s).
+          volumes: *null | [...]
+        }
+    stage: PreDispatch
   workload:
     type: autodetects.core.oam.dev
 
