nix-docker-builder: Try to trim down space use further

--- a/infra/nix-docker-builder/Dockerfile
+++ b/infra/nix-docker-builder/Dockerfile
@@ -3,10 +3,10 @@ FROM nixos/nix:latest AS builder
 ARG ENTRYPOINT_BIN_NAME=bash
 ARG INCLUDED_FLAKE_URIS
 
-WORKDIR /tmp/build
+WORKDIR /workspace/tmp/build
 
 # Build our Nix environment
-RUN HOME=/tmp/build nix \
+RUN HOME=/workspace/tmp/build nix \
     --extra-experimental-features "nix-command flakes" \
     --option filter-syscalls false \
     --accept-flake-config \
@@ -15,20 +15,19 @@ RUN HOME=/tmp/build nix \
 
 # Copy the Nix store closure into a directory. The Nix store closure is the
 # entire set of Nix store values that we need for our build.
-RUN mkdir /tmp/nix-store-closure
-RUN cp -R $(nix-store -qR /tmp/build/.nix-profile) /tmp/nix-store-closure
-RUN cp /tmp/build/.nix-profile/bin/$ENTRYPOINT_BIN_NAME /tmp/build/entrypoint
-RUN mv /tmp/build/.nix-profile /tmp/build/nix-profile
-RUN HOME=/tmp/build nix-collect-garbage -d
+RUN mkdir -p /workspace/tmp/nix-store-closure
+RUN cp -R $(nix-store -qR /tmp/build/.nix-profile) /workspace/tmp/nix-store-closure
+RUN cp /tmp/build/.nix-profile/bin/$ENTRYPOINT_BIN_NAME /workspace/tmp/build/entrypoint
+RUN rm -fR /nix
 
 # Final image is based on scratch. We copy a bunch of Nix dependencies
 # but they're fully self-contained so we don't need Nix anymore.
 FROM scratch
 
-WORKDIR /tmp
+WORKDIR /workspace/tmp
 
 # Copy /nix/store
-COPY --from=builder /tmp/nix-store-closure /nix/store
-COPY --from=builder /tmp/build/nix-profile /
-COPY --from=builder /tmp/build/entrypoint /entrypoint
+COPY --from=builder /workspace/tmp/nix-store-closure /nix/store
+COPY --from=builder /workspace/tmp/build/.nix-profile /
+COPY --from=builder /workspace/tmp/build/entrypoint /entrypoint
 CMD ["/entrypoint"]
