build-nix-image: Include the full profile in /profile

--- a/infra/nix-docker-builder/Dockerfile
+++ b/infra/nix-docker-builder/Dockerfile
@@ -15,13 +15,14 @@ RUN HOME=/workspace/tmp/build nix \
 
 # Copy the Nix store closure into a directory. The Nix store closure is the
 # entire set of Nix store values that we need for our build.
-RUN mkdir -p /workspace/tmp/nix-store-closure
-RUN cp -R $(nix-store -qR /workspace/tmp/build/.nix-profile) /workspace/tmp/nix-store-closure
-RUN cp /workspace/tmp/build/.nix-profile/bin/$ENTRYPOINT_BIN_NAME /workspace/tmp/build/entrypoint
-RUN mkdir -p /workspace/tmp/root/etc
+RUN mkdir -p /workspace/tmp/root/nix/store
+RUN cp -R $(nix-store -qR /workspace/tmp/build/.nix-profile) /workspace/tmp/root/nix/store
+RUN cp /workspace/tmp/build/.nix-profile/bin/$ENTRYPOINT_BIN_NAME /workspace/tmp/root/entrypoint
 RUN cp -a /workspace/tmp/build/.nix-profile/bin /workspace/tmp/root/bin
 # /etc may be a symlink in the nix profile, but can't be on the image filesystem (the runtime needs to set up e.g. resolv.conf)
+RUN mkdir -p /workspace/tmp/root/etc
 RUN cp -a /workspace/tmp/build/.nix-profile/etc/* /workspace/tmp/root/etc
+RUN cp -a /workspace/tmp/build/.nix-profile /workspace/tmp/root/profile
 RUN rm -fR /nix
 
 # Final image is based on scratch. We copy a bunch of Nix dependencies
@@ -30,8 +31,5 @@ FROM scratch
 
 WORKDIR /tmp
 
-# Copy /nix/store
-COPY --from=builder /workspace/tmp/nix-store-closure /nix/store
 COPY --from=builder /workspace/tmp/root /
-COPY --from=builder /workspace/tmp/build/entrypoint /entrypoint
 ENTRYPOINT ["/entrypoint"]
