fix: letsencrypt http challenge must use traefik gateway

--- a/infra/modules/before_addons/letsencrypt_issuer.yaml
+++ b/infra/modules/before_addons/letsencrypt_issuer.yaml
@@ -10,10 +10,9 @@ spec:
       name: letsencrypt
     solvers:
     - http01:
-        ingress:
-          class: traefik
-          ingressTemplate:
-            metadata:
-              annotations:
-                traefik.ingress.kubernetes.io/router.tls: "true"
-                traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        gatewayHTTPRoute:
+          parentRefs:
+          - group: gateway.networking.k8s.io
+            kind: Gateway
+            name: traefik-gateway
+            namespace: traefik
