add dex config to vela addons

--- a/infra/secrets.yaml
+++ b/infra/secrets.yaml
@@ -1,5 +1,8 @@
 grafana-api-key:
     secret: ENC[AES256_GCM,data:zTck1eMIPRP4bnuZW3Lb8lMQl7/3GLKmKEqtzKZLrLZl2HwXz3V4HGe7uBu2tSvI0ZFFnZ19toIy/kqAQyNX32A8woKGoQ7fkEnjZ7AEZK0uVDxYY/OhuB3V1jMJRpFAsvGt2tgFc4l13EYqUEDjamyrNDs=,iv:0We5lZRKoa1X7vyDb5QNRrF4H3tCR06UaG3SULQr0BY=,tag:a7M3oeI/l/AlqwkEc/YCiQ==,type:str]
+dex:
+    clientID: ENC[AES256_GCM,data:xb1i1gxI1CGAeiiVmIuQ0cbrgd838oRzA3YbUtUZNsmCWP7N5b2T8m9VUHH/5BFXWPl85Ujzm17xD+/w5Q1J22BllLRmj63M,iv:EzUsJus31z8jpkhSfppQLuZwfYzpQC7CmlgGXE2s9cs=,tag:2UsvGNRNEWFU8w03MFbXMQ==,type:str]
+    clientSecret: ENC[AES256_GCM,data:sj/6U1ABjyXfjSNWTsTIGX4t411lBsOHH/BiFJh1H3qTJ3g=,iv:8AOu8zk8gsLmCTswjzJ758VRgr5kc5H3HAK3eJKPf5w=,tag:FpxDILwWjafw8918w/GQ9Q==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:677160962006:key/fa4d1d08-ad00-4014-97d2-5ff14e00e1b1
@@ -10,8 +13,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-06-30T15:11:50Z"
-    mac: ENC[AES256_GCM,data:ElMlntlM3hao9114uzL32/PYhBsXvqrIqwz1sXKwz02ZMaIDzLQarNT4w2zY5YMkK0JPxNBgw5KehTI7rojVBbaTBxjG0hthYN83ykmBIN2QfPLhVi+aVvEpJDFrYAtYAH8dGR6OMM/lTrYkPEAnZIFnl3/40XXb8wn9N1b9eFI=,iv:yj/NlCbkOEnuf+8hWnOJ0P5vZzEy/7R9PPiUS/9msbw=,tag:hm0qye2Y+GOoPXpHb5MxgA==,type:str]
+    lastmodified: "2023-10-20T01:28:52Z"
+    mac: ENC[AES256_GCM,data:imPGMZf7klFwXWXCjDPpW3i7WoYmqKFDoUbqG+WZs1IQ0NcksP4z5DjB8iqR/7Yisgmgv4OR7dcEdkdD6+x7RRFtapOjc7ej9rxO5RASZ5IGkvgY1Xr9MJjkg2n8n8tdN4Ne0jB1rXxYnYsKXJR+s9HAbFNQTkhyO/kQVZ7nzAM=,iv:i0t8UsYRkJ8ypQJXCW1r68dixWh90tjVgW5TiZ+frAA=,tag:HDUywOYHOPH+tuVIzcDtFw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
