Revert "fix: dex authentication after cluster migration (#43)"
This reverts commit 786f759931082ef59a093be4ed78b4df4585d062.

--- a/infra/modules/kubevela-addons/addons/velaux.yaml
+++ b/infra/modules/kubevela-addons/addons/velaux.yaml
@@ -70,6 +70,14 @@ spec:
         - vela.scdev.aws.iohkdev.io
         rules:
         - port: 8000
+      type: http-route
+    - properties:
+        domains:
+        - vela.scdev.aws.iohkdev.io
+        rules:
+        - port: 8000
+        secrets:
+        - name: test
       type: https-route
     type: webservice
 ---
