--- a/infra/kube-objects/kustomization.yaml
+++ b/infra/kube-objects/kustomization.yaml
@@ -1,3 +1,5 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+- argo-workflows/base-v3.4.13.yaml
+- argo-workflows/namespace.yaml
