--- a/platform-portal/packages/backend/package.json
+++ b/platform-portal/packages/backend/package.json
@@ -25,7 +25,11 @@
     "@backstage/plugin-auth-backend": "^0.20.0",
     "@backstage/plugin-auth-node": "^0.4.1",
     "@backstage/plugin-catalog-backend": "^1.15.0",
+    "@backstage/plugin-catalog-backend-module-github": "^0.4.5",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.1.4",
+    "@backstage/plugin-events-backend": "^0.2.16",
+    "@backstage/plugin-events-backend-module-github": "^0.1.17",
+    "@backstage/plugin-events-node": "^0.2.16",
     "@backstage/plugin-permission-common": "^0.7.10",
     "@backstage/plugin-permission-node": "^0.7.18",
     "@backstage/plugin-proxy-backend": "^0.4.5",
