Using centralized secrets database to allow terragrunt run-all command execution

--- a/infra/secrets.yaml
+++ b/infra/secrets.yaml
@@ -1,5 +1,8 @@
-grafana-api-key:
-    secret: ENC[AES256_GCM,data:zTck1eMIPRP4bnuZW3Lb8lMQl7/3GLKmKEqtzKZLrLZl2HwXz3V4HGe7uBu2tSvI0ZFFnZ19toIy/kqAQyNX32A8woKGoQ7fkEnjZ7AEZK0uVDxYY/OhuB3V1jMJRpFAsvGt2tgFc4l13EYqUEDjamyrNDs=,iv:0We5lZRKoa1X7vyDb5QNRrF4H3tCR06UaG3SULQr0BY=,tag:a7M3oeI/l/AlqwkEc/YCiQ==,type:str]
+grafana_cloud:
+    api_key: ENC[AES256_GCM,data:cPBj+ibLJmt8EgmT603+/sW7ynXMUd3yqit+5Sd9ErZ4nnVAoY+68lMjrtgOZ8qEBtFWQNx5RdxgdPwnSovS8f+vMaIksQ/JH0uLWEo+XkZccWuOvG++aAsQ8DsCSXDUt6/T0AcWl7Fdv1kRhMPDwQYeHxW6Se3hs0RATvWysnfFNZrH7dzstrasrs5+79pDIHUFlzLKrmlGjJE2tyE1Ew==,iv:pWaG63c3q7Qsy+hnXltQ7JqwCPKhnPaVAHZkDxzl1og=,tag:hGSWPx1e8J+y/wXIqF65kQ==,type:str]
+    prometheus_username: ENC[AES256_GCM,data:DtRtcRyovw==,iv:BSHU+4KJ+z66a0s46r7kb69U+hLGnJgInO0EaWEAZK0=,tag:wkeS5MzWUUEZPg/ZQcjAAA==,type:str]
+    loki_username: ENC[AES256_GCM,data:wTWc4aEe,iv:d35DY2K6cpiM6g7KtjKyTQN0RjP2zUFJ+QLlVYIFqZc=,tag:GMQeU1o/iMDLGqECSj5DJA==,type:str]
+    tempo_username: ENC[AES256_GCM,data:TGg3zTou,iv:bmkgpUlGChOAxET5RNr0SgaoAuBr4lrztc9L8K5hskM=,tag:2viZ4X4mkIvVvCszgIttGQ==,type:str]
 dex:
     clientID: ENC[AES256_GCM,data:xb1i1gxI1CGAeiiVmIuQ0cbrgd838oRzA3YbUtUZNsmCWP7N5b2T8m9VUHH/5BFXWPl85Ujzm17xD+/w5Q1J22BllLRmj63M,iv:EzUsJus31z8jpkhSfppQLuZwfYzpQC7CmlgGXE2s9cs=,tag:2UsvGNRNEWFU8w03MFbXMQ==,type:str]
     clientSecret: ENC[AES256_GCM,data:sj/6U1ABjyXfjSNWTsTIGX4t411lBsOHH/BiFJh1H3qTJ3g=,iv:8AOu8zk8gsLmCTswjzJ758VRgr5kc5H3HAK3eJKPf5w=,tag:FpxDILwWjafw8918w/GQ9Q==,type:str]
@@ -13,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-11-06T19:40:27Z"
-    mac: ENC[AES256_GCM,data:4l6cI45BIxD8MlEfVWk7qTOedS/FKDc/VUA4RAeR8+Ec0S+tWSe1tTYnR+iyc6wYPlU7cZ+C9eMvqr6MqEdE+VNaN/0PeYZYr/VIbcC3uJ4utqkuHvgSPdgjP9ml/0f9AHL29jUaD2WvmgGzfrPjjgii8ZVBxrNpDyIFlTHuSrA=,iv:LBY/nsD5JT3N/kz7ytPDsRwVTi0tgWoX11w/bqYFD0k=,tag:o5eK/Zj9NRyEAwTv/7agKg==,type:str]
+    lastmodified: "2023-12-06T19:25:11Z"
+    mac: ENC[AES256_GCM,data:uqZ+Y9nVHJ8apScLXT7jdvDSRdfv+u/opRP0V+vG3+tOmO8qTF5A/o93ST1TtSIgojPYjdUKdUWWal6S6mKBlT1r8CrBdmkXv38rTV912W8/rWOJGt0O4oGCl7ckw2KTMJNHRJGI8qxhTIwmgyfZj+8alUjgisFd5Vllhkeapgs=,iv:osvr6uWCE/Fs7mq3Z3QT9PXSTJg2Tjev/d7Q3ambXtc=,tag:V2mmDAORai1dZVTRUeE0TQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
