--- a/atlantis/values.yaml
+++ b/atlantis/values.yaml
@@ -19,8 +19,8 @@ orgAllowlist: github.com/input-output-hk/*
 # If using GitHub, specify like the following:
 # github: {}
 github:
-  user: fentonhaslam
-  token: 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
+  user: atlantis
+  token: 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
   secret: xfrcuvmtnndwihkeqhsyrandztseqycahbzofvitmwqeytlqvawqiehvpifwcmfcokkovgxlzfdnqmndhvfbboqvmaepfptgkgnridvqfyodqtmvmaoiwsbwcxmgsiif
 # GitHub Enterprise only:
 #   hostname: github.your.org
@@ -152,13 +152,11 @@ image:
 ## Use Server Side Repo Config,
 ## ref: https://www.runatlantis.io/docs/server-side-repo-config.html
 ## Example default configuration
-# repoConfig: |
-#  ---
-#  repos:
-#  - id: /.*/
-#    apply_requirements: []
-#    workflow: default
-#    allowed_overrides: []
+repoConfig: |
+ ---
+ repos:
+ - id: /.*/
+   allowed_overrides: [workflow]
 #    allow_custom_workflows: false
 #  workflows:
 #    default:
