--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -3,8 +3,8 @@ version: 3
 projects:
 - dir: infra/us-east-1/prod/eks/green
   workflow: terragrunt
-# - dir: infra/us-east-1/prod
-#   workflow: terragrunt
+- dir: infra/us-east-1/dev/eks
+  workflow: terragrunt
 
 workflows:
   terragrunt:
