--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -3,7 +3,7 @@ version: 3
 projects:
 - dir: infra/us-east-1/prod/eks/green
   workflow: terragrunt
-- dir: infra/us-east-1/dev/eks
+- dir: infra/us-east-1/dev/eks/cluster
   workflow: terragrunt
 
 workflows:
