Revert "added new changes and dockerfile""
This reverts commit f058be60727228ae0fcd5cb4833ab4234ac4ab2e.

--- a/atlantis/values.yaml
+++ b/atlantis/values.yaml
@@ -19,8 +19,8 @@ orgAllowlist: github.com/input-output-hk/*
 # If using GitHub, specify like the following:
 # github: {}
 github:
-  user: atlantis
-  token: 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
+  user: fentonhaslam
+  token: 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
   secret: xfrcuvmtnndwihkeqhsyrandztseqycahbzofvitmwqeytlqvawqiehvpifwcmfcokkovgxlzfdnqmndhvfbboqvmaepfptgkgnridvqfyodqtmvmaoiwsbwcxmgsiif
 # GitHub Enterprise only:
 #   hostname: github.your.org
@@ -127,7 +127,6 @@ aws: {}
 
 image:
   repository: ghcr.io/runatlantis/atlantis
-  # repository: flaconi/atlantis-terragrunt
   # if not set appVersion field from Chart.yaml is used
   tag: ""
   pullPolicy: Always
@@ -487,7 +486,7 @@ initContainers: []
 
 # Install providers/plugins into a path shared with the Atlantis pod
 initConfig:
-  enabled: true
+  enabled: false
   image: alpine:latest
   imagePullPolicy: IfNotPresent
   # sharedDir is set as env var INIT_SHARED_DIR
