removed atlantis module and added helm chart

--- a/infra/secrets.yaml
+++ b/infra/secrets.yaml
@@ -7,6 +7,12 @@ grafana_cloud:
 dex:
     clientID: ENC[AES256_GCM,data:P8RVzACAIAtkwEtVQ+bY7HQslXBRmQrHc26uUGmfF1vDwrf1ntDRq38KZUW62L8mNtVqXLFteNb+zJgAa7QY6tLGe0ADfc1E,iv:OMH90eBFU7NEAtlAUyw2wdMgfOVz+VEplHo3F2si+AU=,tag:wCN6cw9F5/fZIqVRZoJFmA==,type:str]
     clientSecret: ENC[AES256_GCM,data:xl7qw2Ej+Cl4bYD16yetVn8YV8Iso8WsfgRGOXSWorGMQrc=,iv:20rLL1SARo1CmaO7o39kQjDa+zRh/IgdYAcgkiEcRS8=,tag:sqZuGaldBPM0nVNbF8pHTw==,type:str]
+github-atlantis:
+    token: ENC[AES256_GCM,data:VhVbBOEPPOAxTsDWUMS7FbgFSpsD4lYWt+lz2qRzKqMXNNtWUPbKjA==,iv:fj9nrRU00AKCAbbuL83wM4XzA/cpoK3mrLJ1ziovk98=,tag:ZH9ARK6ETu4mzA+TJ4wgfg==,type:str]
+    secret: ENC[AES256_GCM,data:Df4D07n8OxFaFPabEgx2DB2CSnh7JorKztanujPKNqjR9pNtOH69vXQqJggcf3ZohaBADcXzRWipmcayD5xMPlVykRNAR+SoZ/NCa9axCL/5OSp2aun523Td1Nzvc3NNPe4Znj83CCMTq3+OMriLZmcMNfYpG5AsgCW5cEM5LQE=,iv:QHLpQmivv6frSNF19ZRAB+9hTa2B6MjNdXN+DsQMzhQ=,tag:Nhb6QIlkZ7v6Z54pfZfq4w==,type:str]
+atlantis-aws-credentials:
+    access_key: ENC[AES256_GCM,data:E6ePxVu5ydP8USLj/26+CFIZ4RA=,iv:ZraILBpslbgHB8Z8BWMboOm0xRC11O3340LIP1eSg1w=,tag:IEpuh1Xgq3irW3sPalxhWQ==,type:str]
+    secret_access_key: ENC[AES256_GCM,data:czYktAxMlxsVQYY2tCDRdonZGTuICNRkgDRsx7QD7AU1OecP2owHEg==,iv:LFD+KkGm+wgV364x+p0oUSu9obgtPzZQ9WQNvD9fY9o=,tag:1NifYdgnOw+8iKqiV93iSA==,type:str]
 marlowe_oracle:
     preprod:
         address: ENC[AES256_GCM,data:oHPLWcACZDBY2Ao9v6hpgIkJw6IsfcOzyaMTQLb0nfctpRpHvRimApKEJF1RMUnMk3bEvOYCD5mf55EG9cfP,iv:o0/P/BwaxMQU1cC5yLZZ/m3USPYuFYxBU8Q4Q5avFF8=,tag:2D1XD5n8ZIeY6H7NSYLKzA==,type:str]
@@ -23,8 +29,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-12-22T19:39:00Z"
-    mac: ENC[AES256_GCM,data:jjz000KMQ+LntkrOozHiZWlUQg2HW5SLALmy4VbSZWJ4/1GM6dvT3L9evknpWDeRvhV4Cotuh+JCRH5FYaXp8qP97/Czo9Berl1cC0NLoMgEhTLIK9J/mG5Bl6q9XzooJLwCnwCtPEF8vCfJDztC1xGCuhDyMFNEjVOKL2qvZ/E=,iv:jCmjEVSWwlMQyhTmyYXgM196948c39zWxUFwZD3bY/0=,tag:CrEGoCntf5uevmhpTa6qcA==,type:str]
+    lastmodified: "2024-01-10T10:02:45Z"
+    mac: ENC[AES256_GCM,data:1HY9xLhxI7qhaY26pL6VbQSwtEKg3MPi5j5ZC6tO6LnN9Jav4bW6rkdBx3BerjOLOfedTA+8WRYVT3kj70W6G2MW+PqtjsDHt4Htmd39+QqQ2Oq8mlg61Mw73zlwqh+dG8qkW39pWyZTtRevkdnLvkeJ05MhWSsTpEBamTmpWTc=,iv:886cczYx8g5uXyo1risAfU8f6rmd1kqi2sVWsaRZ7kA=,tag:iMT59MAPku6AHZfrxbYB/Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.7.3
+    version: 3.8.1
