removed atlantis module and added helm chart

--- a/infra/secrets.yaml
+++ b/infra/secrets.yaml
@@ -10,6 +10,9 @@ dex:
 github-atlantis:
     token: ENC[AES256_GCM,data:184mYPCB/iiRsKxQPrbGskY0D4BSZXICZR68tgLbQ5msxUsmjJJ1+Q==,iv:x0qEEuUiZ7iBD7I9Y9rGZ1L8YHWOFQqKKaRsiPNdQTI=,tag:PGF28Aqu02lRq+9Q+vvmTA==,type:str]
     secret: ENC[AES256_GCM,data:Df4D07n8OxFaFPabEgx2DB2CSnh7JorKztanujPKNqjR9pNtOH69vXQqJggcf3ZohaBADcXzRWipmcayD5xMPlVykRNAR+SoZ/NCa9axCL/5OSp2aun523Td1Nzvc3NNPe4Znj83CCMTq3+OMriLZmcMNfYpG5AsgCW5cEM5LQE=,iv:QHLpQmivv6frSNF19ZRAB+9hTa2B6MjNdXN+DsQMzhQ=,tag:Nhb6QIlkZ7v6Z54pfZfq4w==,type:str]
+atlantis-aws-credentials:
+    access_key: ENC[AES256_GCM,data:E6ePxVu5ydP8USLj/26+CFIZ4RA=,iv:ZraILBpslbgHB8Z8BWMboOm0xRC11O3340LIP1eSg1w=,tag:IEpuh1Xgq3irW3sPalxhWQ==,type:str]
+    secret_access_key: ENC[AES256_GCM,data:czYktAxMlxsVQYY2tCDRdonZGTuICNRkgDRsx7QD7AU1OecP2owHEg==,iv:LFD+KkGm+wgV364x+p0oUSu9obgtPzZQ9WQNvD9fY9o=,tag:1NifYdgnOw+8iKqiV93iSA==,type:str]
 marlowe_oracle:
     preprod:
         address: ENC[AES256_GCM,data:f/Bvov4UYG/VwPuXmIMcUah0Zoh9q6fbwxDY5PlACYIrvr+BGzWLongCy85rrAHl6W/T1HPZoRVz2MGjitVV,iv:mpVUdbUn9iL2bM42DEmySIpMC2VNUeUIdzHnqH92RCc=,tag:uvaD1EFQXC/tKuyaw9FaAA==,type:str]
