--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -2,6 +2,8 @@ version: 3
 projects:
 - dir: infra/us-east-1/dev/eks
   workflow: terragrunt
+- dir: infra/us-east-1/mgmt/vpc
+  workflow: terragrunt
 # - dir: live/prod
 #   workflow: terragrunt
 
