added new change for atlantis role and checking if the atlantis will deploy its role

--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -4,6 +4,8 @@ projects:
   workflow: terragrunt
 - dir: infra/us-east-1/mgmt/vpc
   workflow: terragrunt
+- dir: infra/global/iam/roles/*
+  workflow: terragrunt  
 # - dir: live/prod
 #   workflow: terragrunt
 
