--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -1,6 +1,6 @@
 version: 3
 projects:
-- dir: infra/us-east-1/dev/eks
+- dir: infra/us-east-1/dev/eks/cluster
   workflow: terragrunt
 - dir: infra/us-east-1/mgmt/vpc
   workflow: terragrunt
