Add OpenTelemetry collector for Honeycomb

--- a/infra/secrets.yaml
+++ b/infra/secrets.yaml
@@ -24,6 +24,8 @@ gh-oauth:
 jwt-signature:
     JWT_SIGNATURE: ENC[AES256_GCM,data:WCeQGejZBl7Wa7ome8GxtVpUXZp24A5550cmIzjvVImehy64nfi8EkiI0B4IT6+x3Ris2Fsirg+hk63GUHooJj2/TH7cYhdOg3mDvuEdnDiXSDkC65NX6y1H/6cxx1QzfwBjCacthz7ynYJY,iv:9E1mLhGmeiwlLdFk2bP7YroxCE7id2YI8+LfWrHefCk=,tag:M942xAEGOZmd18O5H/d6aA==,type:str]
     input-properties: ENC[AES256_GCM,data:6gXoN8HFKs7DiEopo4/ojzJegs3zMjKA49ClpXFW87ktzNJwBWP5jvZ0JvcMy9jXouRRV/zqPMwh23u7n4LA0qSN/Zs9JacPMafkcxYOcIGMQcE9xOl02cEjAwqjhBAUqJpxUXoAiSgXN1bNcRYgSDJKuablIazgBTaqKrTDq9yMErM3WL/kSxNXnDh1SLt8nYAlGyEe2UzxEGE0HOd+4JIs3D+aofo/Mwe+aw==,iv:0dCQVMbItMWoWS5Stv9C5a3sh/nSX8fQpyxvIN391RA=,tag:odRuVdOWjswdtf2N1KIDXQ==,type:str]
+honeycomb:
+    api_key: ENC[AES256_GCM,data:SlLr/nO+SBe79PVL4LxB/jI6ys5eKw==,iv:t6UASjG0htMGiovFOzT9154AySk79OAOxkiszYCU3Cc=,tag:CRkzNRvaZq7AYS0OdEYsbQ==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:677160962006:key/fa4d1d08-ad00-4014-97d2-5ff14e00e1b1
@@ -34,8 +36,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-01-09T15:38:27Z"
-    mac: ENC[AES256_GCM,data:HADZ9gkim8g8FIfGVHiFrkm34Z+gk458axBR3JFZi8MrFGVWxzTJVZYi8a9X8m0E/SCf/Dh9fPY4oaYrU/L7u0gmo7v2/j0BfqZWoZfvitgHUeMNruc6tNPD1DldBDYGN4F7c/z4YbLI9Bz6w5eauZFYJT8j7w3Zrp/SBgrCP94=,iv:E1NhKaLTC5NTN4sFgGV3pEKUzso7yX2mM4ft5IUVfuU=,tag:kGYgqW9sQ8qC1vQcvT1R3g==,type:str]
+    lastmodified: "2024-01-11T14:59:25Z"
+    mac: ENC[AES256_GCM,data:9zXZA3SvYCB+3QucspdjoUqIovX/5ADfZH1Dcy/PgmmDZiSzsGKGXYUL17H1kk8Fuh4/dJ7u4xoaR90wvlD7Ra01rUk0a4CvC3VLVMQvVPgDmVcT2VJ/h0Tf3Oef6vDQe1yvnQrEMnnotEHXa1H6Eb5fqO/Y4F0FL3aqV35jg2M=,iv:AsX8UCN9Qd3hQceCkOTdHlfbdsexvoJ6XlpyAyoh8TY=,tag:DmsxZnB5yuG1qb8EuKqphg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
