fix: adding nodeselector to avoid pending jobs (waiting for ebs volume)

--- a/infra/datasync/datasync.yaml
+++ b/infra/datasync/datasync.yaml
@@ -103,4 +103,5 @@ spec:
             persistentVolumeClaim:
               claimName: datasync-pvc
           restartPolicy: OnFailure
-
+          nodeSelector:
+            topology.kubernetes.io/zone: "us-east-1b"
