disabling clusterIP service for preview node

--- a/infra/modules/kubevela-addons/cardano/templates/cardano-node.yaml
+++ b/infra/modules/kubevela-addons/cardano/templates/cardano-node.yaml
@@ -26,10 +26,12 @@ spec:
       exposeType: ClusterIP
       image: inputoutput/cardano-node
       imagePullPolicy: Always
+     {{ if not (eq $network "preview") }}
       ports:
       - expose: true
         port: 8090
         protocol: TCP
+      {{- end }}
       volumeMounts:
         emptyDir:
         - name: ipc
