chore: adding expose trait on cardano-node-preview (#128)
* chore: adding expose trait on cardano-node-preview

* disabling clusterIP service for preview node

--- a/infra/modules/kubevela-addons/cardano/templates/cardano-node.yaml
+++ b/infra/modules/kubevela-addons/cardano/templates/cardano-node.yaml
@@ -26,15 +26,29 @@ spec:
       exposeType: ClusterIP
       image: inputoutput/cardano-node
       imagePullPolicy: Always
+     {{ if not (eq $network "preview") }}
       ports:
       - expose: true
         port: 8090
         protocol: TCP
+      {{- end }}
       volumeMounts:
         emptyDir:
         - name: ipc
           mountPath: /ipc
     traits:
+    {{ if eq $network "preview" }}
+    - type: expose
+      properties:
+        annotations:
+          "external-dns.alpha.kubernetes.io/hostname": "cardano-node-{{ $network }}.scdev.aws.iohkdev.io"
+          "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "instance"
+          "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing"
+          "service.beta.kubernetes.io/aws-load-balancer-type": "external"
+        type: LoadBalancer
+        ports:
+        - port: 8090
+    {{- end }}
     - type: sidecar
       properties:
         name: socat
